--- a/major_project_report/sec/acknowledgment.tex
+++ b/major_project_report/sec/acknowledgment.tex
@@ -1,8 +1,19 @@
-
 % Acknowledgments
 
 \newpage
 \section*{ACKNOWLEDGMENT}
 \addcontentsline{toc}{section}{Acknowledgments}
+We would like to express our sincere gratitude to the ​{\bf Department of Electronics and Computer Engineering} at Institute of Engineering, Pulchowk Campus for providing us opportunity to implement the knowledge gained over these years as major project for fourth year.
 
-This is the Acknowledgments page.
+We would also like to express our deepest sense of gratitude and thanks to our supervisor {\bf Mr. Daya Sagar Baral} for providing invaluable insight and guidelines for this project.
+
+We would also like to thank all of our friends who have directly and indirectly helped us in doing this project. Last but not the least, we place a deep sense of appreciation to our family members who have been constant source of inspiration for us.
+
+Any kind of suggestion or criticism will be highly appreciated and acknowledged.
+
+\vskip 10mm
+{\bf Authors:}
+\newline Abhishek Paudel
+\newline Brihat Raj Bajracharya
+\newline Miran Ghimire
+\newline Nabin Bhattarai
