--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -22,8 +22,15 @@ The non-functional requirement of the system can be summarized as follows:
 \end{itemize}
 \subsection{Feabisility Assessment}
 \subsubsection{Operational Feasiblility}
+Our project is a machine learning project and includes supervised learning. Supervised learning is a type of learning in which 
+
 \subsubsection{Technical Feasiblility}
+
+
 \subsubsection{Economic Feasibility}
+
+
+
 \subsection{Software Development Approach}
 The developed system, being huge and dynnamic nature, may not be developed eefficiently and timely procured with the traditional development approaches like waterfall. Thus to meet the requirements of the system and ensuring the timely delivery and adaptibility for changing requirement, Scrum methodology under the Agile Development method is chosen for the developement of system.
 
