--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -27,6 +27,13 @@ The non-functional requirement of the system can be summarized as follows:
 \subsection{Software Development Approach}
 The developed system, being huge and dynnamic nature, may not be developed eefficiently and timely procured with the traditional development approaches like waterfall. Thus to meet the requirements of the system and ensuring the timely delivery and adaptibility for changing requirement, Scrum methodology under the Agile Development method is chosen for the developement of system.
 
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[width = 5 cm]{fig/scrum-chart.jpg}
+\caption{scrum software developement cycle}
+\label{fig:scrum}
+\end{figure}
 Scrum is an agile way to manage project. Agile software developlment with Scrum is often perceived as a methodology, but rather than viewing Scrum as methodology, it is often thought as a framework for managing a process. In the agile Scrum world, instead of providing complete, detailed descriptions of how everything is to be done on a project,much of it is left up to Scrum software development team. This is because the team will know best how to solve the problem they are presented. It relies on a self-organizing, cross-functional team. The scrum team is self-organizing in that there is no overall team leader whodecides which person will do which task or how a problem will be solved. This is the issue that are decided by the team as a whole. Besides the team is cross functional, because of which everyone is needed to take a feature from idea to implementation. 
 
 This model suggests that projects progress via a series of sprints. In keeping with an agile methodology, sprints are timeboxed to no more than a month long, most commonly two weeks. It advocates for planning meeting at the start of the sprint, where team members figure out how many items they can commit to and then create a sprint backlog, a list of task to perform during the sprint. During an agile Scrum sprint, the Scrum team takes a small set of features from idea to coded and tested functionality. At the end, these features are coded, tested and integrated into the evolving product or system.
@@ -37,12 +44,6 @@ The primary artifact in Scrum development is, the product itself. The Scrum mode
 
 Hence scrum is adpative, has small repeating cycles and there is short-term planning with constant feedback, inspection and adaption and is therefore chosen as the software development methodolgy. Here, project team members can be thought of a software development team and project supervisior as scrum master. The scrum meeting was conducted regulary within the interval of 3 weeks, keeping scrum backlog as well as product backlog and hence the progress in the project was made in the form of sprints whereby the product backlog helped to identify and prioritizes the features to implement in each sprint and the burndown chart helped to keep the project timely on schedule. Whenever the bug was found relating to the feature, it was dealt immediately before marking the feature complete i.2 1-2 sprints ware focused only on Defect backlogs. Each scrum meeting lasted about 15 minutes in which every team member answered three question: What have I done since lastmeeting?, What will I do until next meeting? and What problems do I have? and hence in this way a cycle is continued till product is completely developed.
 
-\begin{figure}[!h]
-\centering
-\includegraphics[width = 5 cm]{fig/scrum-chart.jpg}
-\caption{scrum software developement cycle}
-\label{fig:scrum}
-\end{figure}
 
 \subsection{Data Collection}
 
