--- a/major_project_report/sec/system_design.tex
+++ b/major_project_report/sec/system_design.tex
@@ -101,6 +101,7 @@ The entities in the system are:
 \caption{Activity Diagram of the System}
 \label{fig:activity}
 \end{figure}
+The diagram above shows the activity digram of the system. It depicts how the user, admin and system interacts with each other. Initally user login into the system providing the basic user profile information. Afterwards, the status of the new/old user is used to predict the personality with classifier. Then music is recommended to user. Besides, the user can also view his personality.
 
 \newpage
 \subsection{Data Flow Diagram}
