--- a/major_project_report/sec/system_design.tex
+++ b/major_project_report/sec/system_design.tex
@@ -9,7 +9,7 @@ The give figure below is the architectural diagram of the project showing the pr
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width = 16 cm]{fig/pbrs.png}
+\includegraphics[width = 16 cm]{fig/system.png}
 \caption{block diagram of the system}
 \label{fig:project}
 \end{figure}
@@ -113,7 +113,10 @@ The diagram above shows the activity digram of the system. It depicts how the us
 \end{figure}
 
 \newpage
-\subsection{Front End of the System}
+\subsection{Front End of the System(User Interface)}
+User Interface is one of the major part of the system. It is where a user will login through their facebook id in order to experience the personalized based music listening. User is able to able to view his personality via the website and also view the detailed description about the personality traits. Personality classification and music recommendation are all performed in the backend of the system. 
+
+Following are the snapshots of our system UI:
 \begin{figure}[!ht]
 \centering
 \includegraphics[width = 16 cm]{fig/System.png}
@@ -123,3 +126,4 @@ The diagram above shows the activity digram of the system. It depicts how the us
 
 \newpage
 \subsection{Back End of the System}
+After the user login through facebook, the user post are extracted through Graph API. The data obtained goes through the preprocessor where it's performs various NLP tehniques such as tokenization, POS tagging at the end of which feature vector is given as output by this subsystem. Thus created vector is passed through the classifier, that classifies the personality of the user, which is then stored in the database and is also fed into user-to-user collaborative filtering engine to determine the similar user and recommend the music to the user.Besides there are also other recommendation model, one with the least RMSE value is used for the recommendation of the music. Thus obtained result is sent back to the front end and is displayed to the user. Then the user can view recommended music and his/her personality traits too.
